# optree

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  conda-recipe.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml  tests-with-pydebug.yml  tests.yml
docs/source/: ops.rst  spelling_wordlist.txt
include/: treespec.h
include/optree/: hashing.h  pytypes.h  registry.h  treespec.h
optree/: _C.pyi  __init__.py  accessors.py  dataclasses.py  ops.py  registry.py  typing.py  version.py
optree/integrations/: attrs.py
src/: CMakeLists.txt  optree.cpp  registry.cpp
src/treespec/: constructor.cpp  constructors.cpp  flatten.cpp  gc.cpp  hashing.cpp  richcomparison.cpp  serialization.cpp  treespec.cpp
tests/: requirements.txt  test_dataclasses.py  test_ops.py  test_registry.py  test_treespec.py  test_typing.py
tests/concurrent/: test_subinterpreters.py
tests/integrations/: test_attrs.py
